yaml_conf/elasticsearch/elasticsearch-dung-ingress.yaml
# https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/

apiVersion: networking.k8s.io/v1  
kind: Ingress                     
metadata:
  name: elasticsearch-dung         
  namespace: elk-dung              
  annotations:
    nginx.org/ssl-services: elasticsearch-master # Backend service dung HTTPS
spec:
  ingressClassName: nginx          
  rules:
    - host: elasticsearch-dung.vnpost.cloud # Domain truy cap Elasticsearch
      http:
        paths:
          - path: /                # Match tat ca request tu root
            pathType: Prefix # Cach match do Ingress controller quyet dinh
            backend:
              service:
                name: elasticsearch-master # Service Elasticsearch noi bo (hien tai do helm tao ra)
                port:
                  number: 9200     # Port Elasticsearch
  tls:
    - hosts:
        - elasticsearch-dung.vnpost.cloud # Domain dung TLS , phuc vu cho viec ket noi https
      secretName: elasticsearch-master-certs # Secret chua certificate TLS , phuc vu cho viec ket noi https
