yaml_conf/elasticsearch/kibana-dung-ingress.yaml
# https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-dung
  namespace: elk-dung
  annotations:
    nginx.org/proxy-read-timeout: "300"
    nginx.org/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: kibana-dung.vnpost.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-dung-kibana
                port:
                  number: 5601
